--- a/src/Archmage/GameBundle/Resources/views/Account/profile.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Account/profile.html.twig
@@ -3,21 +3,49 @@
 {% block title %}Perfil{% endblock %}
 
 {% block body %}
-    <div class="container">
-        <div class="jumbotron text-center">
-            <div class="row">
-                <div class="col-xs-12">
-                    <div class="box-icon alert alert-{{ player.faction.class }}">
-                        <span class="fa fa-fw fa-4x fa-user"></span>
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12">
+            <div class="page-header text-center">
+                <h1><i class="fa fa-fw fa-image"></i>Perfil</h1>
+            </div>
+        </div>
+    </div>
+    <div class="jumbotron text-center">
+        <div class="row">
+            <div class="col-xs-12">
+                <div class="box-icon alert alert-{{ player.faction.class }}">
+                    <span class="fa fa-fw fa-4x fa-user"></span>
+                </div>
+                <div class="info">
+                    <h1 class="text-center">{{ player.nick }}<small>#????</small></h1>
+                    <a href="{{ path('archmage_game_army_attack') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-flag"></i><span class="hidden-xs">Atacar</span></a>
+                    <a href="{{ path('archmage_game_magic_conjure') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-magic"></i><span class="hidden-xs">Conjurar</span></a>
+                    <a href="{{ path('archmage_game_account_message') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-send"></i><span class="hidden-xs">Mensaje</span></a>
+                </div>
+                <br>
+                <div class="progress">
+                    <div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="min-width:2em; width: {{ random(100) }}%">
                     </div>
-                    <div class="info">
-                        <h1 class="text-center">{{ player.nick }}<small>#????</small></h1>
-                        <a href="{{ path('archmage_game_army_attack') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-flag"></i><span class="hidden-xs">Atacar</span></a>
-                        <a href="{{ path('archmage_game_magic_conjure') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-magic"></i><span class="hidden-xs">Conjurar</span></a>
-                        <a href="{{ path('archmage_game_account_message') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-send"></i><span class="hidden-xs">Mensaje</span></a>
+                </div>
+                <div class="progress">
+                    <div class="progress-bar progress-bar-info progress-bar-striped" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="min-width:2em; width: {{ random(100) }}%">
+                    </div>
+                </div>
+                <div class="progress">
+                    <div class="progress-bar progress-bar-warning progress-bar-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="min-width:2em; width: {{ random(100) }}%">
+                    </div>
+                </div>
+                <div class="progress">
+                    <div class="progress-bar progress-bar-danger progress-bar-striped" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="min-width:2em; width: {{ random(100) }}%">
+                    </div>
+                </div>
+                <div class="progress">
+                    <div class="progress-bar progress-bar-primary progress-bar-striped" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="min-width:2em; width: {{ random(100) }}%">
                     </div>
                 </div>
             </div>
         </div>
     </div>
+</div>
 {% endblock %}
