--- a/src/Archmage/GameBundle/Resources/views/Army/disband.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/disband.html.twig
@@ -7,7 +7,7 @@
     <div class="row">
         <div class="col-xs-12">
             <div class="page-header text-center">
-                <h1><i class="fa fa-fw fa-user-times"></i>Desbandar<br><small><i class="fa fa-fw fa-hourglass"></i>300</small></h1>
+                <h1><i class="fa fa-fw fa-user-times"></i>Desbandar<br><small><i class="fa fa-fw fa-hourglass"></i>{{ player.turns }}</small></h1>
             </div>
         </div>
         {% for troop in player.troops if troop.quantity > 0 %}
@@ -33,13 +33,14 @@
                     </div>
                 </div>
                 <div class="panel-footer text-center">
-                    <form class="form-inline" data-toggle="validator" action="{{ path('archmage_game_army_disband') }}" method="post">
+                    <form id="troop{{ troop.id }}" name="troop{{ troop.id }}" class="form-inline" data-toggle="validator" action="{{ path('archmage_game_army_disband') }}" method="post">
                         <div class="form-group has-feedback">
                             <div class="input-group">
                                 <div class="input-group-btn">
-                                    <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-lg fa-user-times"></i> Desbandar</button>
+                                    <button type="submit" class="btn btn-default" {% if troop.quantity <= 0%}disabled{% endif %}><i class="fa fa-fw fa-lg fa-user-times"></i>Desbandar</button>
                                 </div>
-                                <input type="number" class="form-control" id="{{ troop.unit.name }}" name="{{ troop.unit.name }}" min="1" max="{{ troop.quantity }}" value="0" required/>
+                                <input type="number" class="form-control" id="quantity" name="quantity" min="1" max="{{ troop.quantity }}" value="0" {% if troop.quantity <= 0 %}disabled{% endif %} required />
+                                <input type="hidden" id="troop" name="troop" value="{{ troop.id }}" {% if troop.quantity <= 0 %}disabled{% endif %} required />
                                 <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
                             </div>
                         </div>
@@ -50,7 +51,7 @@
         {% else %}
         <div class="container">
             <div class="col-xs-12 alert alert-danger text-center" role="alert">
-                <i class="fa fa-fw fa-lg fa-exclamation-triangle"></i> Actualmente no tienes tropas en tu ejército. Tal vez deberías <i class="fa fa-fw fa-user-plus"></i><a href="{{ path('archmage_game_army_recruit') }}">Reclutar</a> alguna.
+                <i class="fa fa-fw fa-lg fa-exclamation-triangle"></i> Actualmente no tienes tropas en tu ejército. Tal vez deberías <i class="fa fa-fw fa-user-plus"></i><a href="{{ path('archmage_game_army_recruit') }}">Reclutar</a> algunas.
             </div>
         </div>
         {% endfor %}
